force-app/main/default/objects/Servicio__c/Servicio__c.object-meta.xml
<CustomObject>
    <label>Servicio</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>