force-app/main/default/objects/Servicio__c/fields/Incluido__c.field-meta.xml
<CustomField>
    <fullName>Incluido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incluido</label>
    <type>Checkbox</type>
</CustomField>