force-app/main/default/objects/Servicio__c/fields/Name_Servicio_pack_maestro__c.field-meta.xml
<CustomField>
    <fullName>Name_Servicio_pack_maestro__c</fullName>
    <label>Name Servicio pack maestro</label>
    <length>30</length>
    <type>Text</type>
</CustomField>