force-app/main/default/objects/Servicio__c/fields/Pack_de_servicio__c.field-meta.xml
<CustomField>
    <fullName>Pack_de_servicio__c</fullName>
    <label>Pack de servicio</label>
    <referenceTo>Pack_de_servicio__c</referenceTo>
    <relationshipLabel>Servicios</relationshipLabel>
    <relationshipName>Servicios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>